--- a/Volunteer.ipynb
+++ b/Volunteer.ipynb
@@ -236,7 +236,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Analyze text information seperately for four questions"
+    "## 3. Analyze text information"
    ]
   },
   {
@@ -271,7 +271,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.1 Q1--How did you suprise yourself today? "
+    "### 3.1 Calculate word frequency"
    ]
   },
   {
@@ -279,6 +279,19 @@
    "metadata": {},
    "source": [
     "### Method 1: Manually calculate the word frequency"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 320,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "stop_word = open(\"Stopwords.txt\", \"w\")\n",
+    "stop_word.write(str(stopword))\n",
+    "stop_word.close()"
    ]
   },
   {
@@ -354,6 +367,116 @@
    "metadata": {},
    "source": [
     "### Method 2: Using CountVectorizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 303,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "cv = CountVectorizer(ngram_range = (1,1), stop_words = 'english',token_pattern = '\\\\b\\\\w+\\\\b')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 304,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CountVectorizer(analyzer='word', binary=False, decode_error='strict',\n",
+       "        dtype=<class 'numpy.int64'>, encoding='utf-8', input='content',\n",
+       "        lowercase=True, max_df=1.0, max_features=None, min_df=1,\n",
+       "        ngram_range=(1, 1), preprocessor=None, stop_words='english',\n",
+       "        strip_accents=None, token_pattern='\\\\b\\\\w+\\\\b', tokenizer=None,\n",
+       "        vocabulary=None)"
+      ]
+     },
+     "execution_count": 304,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cv.fit(word_surprise)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 305,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "countvect = cv.transform(word_surprise).toarray()\n",
+    "voc = cv.vocabulary_\n",
+    "count = countvect.sum(axis = 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 306,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "freq = dict()\n",
+    "for word in voc:\n",
+    "    freq[word] = count[voc[word]]   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 307,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(35, 'guitar'),\n",
+       " (32, 'played'),\n",
+       " (29, 'playing'),\n",
+       " (27, 'new'),\n",
+       " (25, 'song'),\n",
+       " (25, 'learned'),\n",
+       " (23, 'play'),\n",
+       " (21, 'didnt'),\n",
+       " (12, 'learn'),\n",
+       " (11, 'chords'),\n",
+       " (10, 'did'),\n",
+       " (9, 'learning'),\n",
+       " (8, 'chord'),\n",
+       " (7, 'yes'),\n",
+       " (7, 'good')]"
+      ]
+     },
+     "execution_count": 307,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "freq = [(freq[w], w) for w in freq]\n",
+    "freq.sort()\n",
+    "freq.reverse()\n",
+    "freq[:15]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The two methods have the same result"
    ]
   },
   {
@@ -566,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 313,
    "metadata": {
     "collapsed": false
    },
@@ -581,125 +704,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 314,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "results['Effort_unigram'] =  [b for (a,b) in effort_uni]\n",
+    "results['Effort_unigram_freq'] =  [a for (a,b) in effort_uni]\n",
+    "results['Effort_bigram'] =  [b for (a,b) in effort_bi]\n",
+    "results['Effort_bigram_freq'] =  [a for (a,b) in effort_bi]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 315,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "results['Hopeful_unigram'] =  [b for (a,b) in hopeful_uni]\n",
+    "results['Hopeful_unigram_freq'] =  [a for (a,b) in hopeful_uni]\n",
+    "results['Hopeful_bigram'] =  [b for (a,b) in hopeful_bi]\n",
+    "results['Hopeful_bigram_freq'] =  [a for (a,b) in hopeful_bi]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 316,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "results['Support_unigram'] =  [b for (a,b) in support_uni]\n",
+    "results['Support_unigram_freq'] =  [a for (a,b) in support_uni]\n",
+    "results['Support_bigram'] =  [b for (a,b) in support_bi]\n",
+    "results['Support_bigram_freq'] =  [a for (a,b) in support_bi]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 317,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "results.to_csv(\"Text_Analysis_Yinzhuo_Ding.csv\", index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 243,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "cv = CountVectorizer(ngram_range = (1,1), stop_words = 'english',token_pattern = '\\\\b\\\\w+\\\\b')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 244,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "CountVectorizer(analyzer='word', binary=False, decode_error='strict',\n",
-       "        dtype=<class 'numpy.int64'>, encoding='utf-8', input='content',\n",
-       "        lowercase=True, max_df=1.0, max_features=None, min_df=1,\n",
-       "        ngram_range=(1, 1), preprocessor=None, stop_words='english',\n",
-       "        strip_accents=None, token_pattern='\\\\b\\\\w+\\\\b', tokenizer=None,\n",
-       "        vocabulary=None)"
-      ]
-     },
-     "execution_count": 244,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cv.fit(word_surprise)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 245,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "countvect = cv.transform(word_surprise).toarray()\n",
-    "voc = cv.vocabulary_\n",
-    "count = countvect.sum(axis = 0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 246,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "freq = dict()\n",
-    "for word in voc:\n",
-    "    freq[word] = count[voc[word]]   "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 247,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(35, 'guitar'),\n",
-       " (32, 'played'),\n",
-       " (29, 'playing'),\n",
-       " (27, 'new'),\n",
-       " (25, 'song'),\n",
-       " (25, 'learned'),\n",
-       " (24, 't'),\n",
-       " (23, 'play'),\n",
-       " (21, 'didn'),\n",
-       " (12, 'learn'),\n",
-       " (11, 'chords'),\n",
-       " (10, 'did'),\n",
-       " (9, 'learning'),\n",
-       " (8, 'chord'),\n",
-       " (7, 'yes')]"
-      ]
-     },
-     "execution_count": 247,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "freq = [(freq[w], w) for w in freq]\n",
-    "freq.sort()\n",
-    "freq.reverse()\n",
-    "freq[:15]"
    ]
   },
   {
